--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,31 @@
 <h1>マイページ</h1>
-<%= @user.name %>
-<%= @user.sex %>
-<%= @user.age %>
-<%= @user.height %>
+<table>
+	<tr>
+		<td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg',fallback: "no_image.jpg" %></td>
+	</tr>
+	<tr>
+		<th>名前</th>
+		<td><%= @user.name %></td>
+	</tr>
+	<tr>
+		<th>性別</th>
+		<td><%= @user.sex %></td>
+	</tr>
+	<tr>
+		<th>年齢</th>
+		<td><%= @user.age %>才</td>
+	</tr>
+	<tr>
+		<th>身長</th>
+		<td><%= @user.height %>cm</td>
+	</tr>
+	<tr>
+		<th>体重</th>
+		<td><%= @user.registar_weight %>kg</td>
+	</tr>
+</table>
+<%= link_to "編集する" ,edit_user_path(@user.id) %>
+<%= link_to "トレーニングする" ,trainings_path %>
+<%= link_to "トレーニング記録"  %>
+<%= link_to "体重管理"  %>
+<%= link_to "コミュニティ" %>
