--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>ジャンル編集画面</h1>
 
-<%= form_for(@genre) do |f| %>
+<%= form_for(@genre,url:admin_genre_path) do |f| %>
     <%= f.text_field :genre_name, autofocus: true, autocomplete: "genre_name" %>
 	<%= f.label :有効  %>
 	<%= f.radio_button :class_status, :有効 %>
