--- a/app/views/admin/trainings/new.html.erb
+++ b/app/views/admin/trainings/new.html.erb
@@ -1,14 +1,19 @@
 <h1>動画投稿ページ</h1>
-<%= form_for (@training) do |f| %>
+<%= form_for(@training, url: admin_trainings_path) do |f| %>
 <table>
 	<tr>
 		<th>タイトル</th>
 		<td><%= f.text_field :training_name, autofocus: true, autocomplete: "training_name" %></td>
 	</tr>
-  <tr>
-    <th>youtube url</th>
-    <td><%= f.text_field :youtube_url,autofocus: true, autocomplete: "youtube_url" %></td>
-  </tr>
+    <tr>
+      <th>youtube url</th>
+      <td><%= f.text_field :youtube_url,autofocus: true, autocomplete: "youtube_url" %></td>
+    </tr>
+
+    <tr>
+      <th>ジャンル</th>
+      <td><%= f.collection_select(:genre_id, Genre.all, :id, :genre_name) %></td>
+    </tr>
     <tr>
       <th>説明</th>
       <td><%= f.text_area :description, autofocus: true, autocomplete: "description" %></td>
@@ -22,5 +27,5 @@
     <tr><td><%= f.submit '投稿する' %></td></tr>
 
   </table>
-  <%= link_to "ジャンル管理へ",genres_path %>
+  <%= link_to "ジャンル管理へ",admin_genres_path %>
 <% end %>
