--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
 	</tr>
 </table>
 <%= link_to "編集する" ,edit_user_path(@user.id) %>
-<%= link_to "トレーニングする" ,trainings_path %>
+<%= link_to "トレーニングする" ,user_trainings_path %>
 <%= link_to "トレーニング記録"  %>
 <%= link_to "体重管理"  %>
 <%= link_to "コミュニティ" %>
