BMI、標準体重計算機能完成、fullcalender実装

--- a/app/views/user/conduct_trainings/index.html.erb
+++ b/app/views/user/conduct_trainings/index.html.erb
@@ -1,5 +1,7 @@
 <h1>今日のトレーニング</h1>
 
+<%= link_to "トレーニングを全て削除","/user/conduct_training",method: :delete %>
+
 <% @conduct_trainings.each do |conduct| %>
 	<table>
 		<tr>
@@ -10,8 +12,13 @@
 	        	<%= conduct.training.number_time %>回
 	        </td>
 	        <td>
-				×<%= conduct.set_count %>セット
+	        	<%= form_for conduct, url:user_conduct_training_path(conduct.id) do |f| %>
+				×<%= f.number_field :set_count %><%= f.submit "変更" %>
+			</td>
+				<% end %>
+			<td><%= link_to "削除" ,user_conduct_training_path(conduct.id),method: :delete %>
 			</td>
 		</tr>
 	</table>
 <% end %>
+<%= link_to "トレーニングに戻る", user_trainings_path %>
