--- a/app/views/user/weights/new.html.erb
+++ b/app/views/user/weights/new.html.erb
@@ -11,7 +11,8 @@
 		<td><%= f.text_field :weight, autofocus: true, autocomplete: "weight" %>kg</td>
 	</tr>
 
-    <tr><td><%= f.submit '計算する' %></td></tr>
+    <tr><td><%= f.submit '計算する',name: "calculation_button" %></td></tr>
+    <tr><td><%= f.submit '保存する' %></td></tr>
 
    <tr>
    	   <th>BMI</th>
