--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,6 @@
 </table>
 <%= link_to "編集する" ,edit_user_path(@user.id) %>
 <%= link_to "トレーニングする" ,user_trainings_path %>
-<%= link_to "トレーニング記録"  %>
+<%= link_to "トレーニング記録", user_training_managements_path %>
 <%= link_to "体重管理",user_weights_path %>
 <%= link_to "コミュニティ" %>
