--- a/app/views/user/weights/index.html.erb
+++ b/app/views/user/weights/index.html.erb
@@ -1,8 +1,34 @@
 <h1>体重管理</h1>
 <%= link_to "体重入力画面へ",new_user_weight_path %>
 
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6">
+			<h2>体重</h2>
+			<%= column_chart Weight.pluck(:created_at, :weight),
+			    id:'weight-chart',
+				width:'600px',
+				height:'600px' %>
+		</div>
+
+		<div class="col-xs-6">
+			<h2>BMI</h2>
+			<%= column_chart Weight.pluck(:created_at, :bmi),
+			    id:'bmi-chart',
+				width:'600px',
+				height:'600px' %>
+		</div>
+	</div>
+</div>
+
 <% current_user.weights.each do |weight| %>
     <table>
+    	<tr>
+    		<th>登録日時</th>
+    		<th>体重</th>
+    		<th>BMI</th>
+    		<th></th>
+    	</tr>
     	<tr>
     		<td>
 			    <%= weight.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
@@ -10,6 +36,12 @@
 
 			<td>
 				<%= weight.weight %>kg
+			</td>
+			<td>
+				<%= weight.bmi %>
+			</td>
+			<td>
+				<%= link_to "削除",user_weight_path(weight.id),method: :delete %>
 			</td>
 		</tr>
 	</table>
