投稿機能、いいね機能実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,24 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/34ad885584.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <% if user_signed_in? %>
-     <%= link_to "ログアウト",destroy_user_session_path,method: :delete %>
-     <%= link_to "マイページ",user_path(current_user.id) %>
+    <ul class="nav nav-pills">
+       <li role="presentation"><%= link_to "ログアウト",destroy_user_session_path,method: :delete %></li>
+       <li role="presentation"><%= link_to "マイページ",user_path(current_user.id) %></li>
+       <li role="presentation"><%= link_to "トレーニング履歴",user_training_managements_path %></li>
+       <li role="presentation"><%= link_to "コミュニティ" %></li>
+     </ul>
 
     <% else %>
-      <%= link_to "ログイン",new_user_session_path %>
-      <%= link_to "新規登録", new_user_registration_path %>
+    <ul class="nav nav-pills">
+      <li role="presentation"><%= link_to "ログイン",new_user_session_path %></li>
+      <li role="presentation"><%= link_to "新規登録", new_user_registration_path %></li>
+      <li role="presentation"><%= link_to "about",homes_about_path %></li>
+    </ul>
 
     <% end %>
 
