--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,38 @@
 
     @import "bootstrap-sprockets";
     @import "bootstrap";
+
+*{
+	margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size:18px;
+}
+
+.profile_image{
+	border-radius:50%;
+}
+
+.image1 {
+background-image: url(portfolio_top1.jpeg);
+width:100%;
+height:700px;
+background-size:cover;
+position:relative;
+}
+
+#main-image h1{
+	position:absolute;
+	top:300px;
+	left:50px;
+	font-size:60px;
+	text-align:center;
+	text-shadow: 1px #fff;
+}
+
+.topbtn{
+	position:absolute;
+	bottom:100px;
+	left:600px;
+	font-size:20px;
+}
