--- a/app/views/user/weights/new.html.erb
+++ b/app/views/user/weights/new.html.erb
@@ -1,38 +1,45 @@
-<h1>体重入力画面</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 
-<%= form_for(@weight, url: user_weights_path, method: :post) do |f| %>
-<table>
-	<tr>
-		<th>身長</th>
-		<td><%= @user.height %>cm</td>
-	</tr>
-	<tr>
-		<th>現在の体重</th>
-		<td><%= f.text_field :weight, autofocus: true, autocomplete: "weight" %>kg</td>
-	</tr>
+      <h1>体重入力画面</h1>
 
-    <tr><td><%= f.submit '計算する',name: "calculation_button" %></td></tr>
-    <tr><td><%= f.submit '保存する' %></td></tr>
+      <%= form_for(@weight, url: user_weights_path, method: :post) do |f| %>
+      <table>
+      	<tr>
+      		<th>身長</th>
+      		<td><%= @user.height %>cm</td>
+      	</tr>
+      	<tr>
+      		<th>現在の体重</th>
+      		<td><%= f.text_field :weight, autofocus: true, autocomplete: "weight" %>kg</td>
+      	</tr>
 
-   <tr>
-   	   <th>BMI</th>
-	   <td><%= @bmi %></td>
-   </tr>
+          <tr><td><%= f.submit '計算する',name: "calculation_button",class: "btn btn-primary btn-lg active" %></td></tr>
+          <tr><td><%= f.submit '保存する',class: "btn btn-primary btn-lg active" %></td></tr>
 
-    <tr>
-   	   <th>適正体重</th>
-	   <td><%= @proper_weight %>kg</td>
-   </tr>
+         <tr>
+         	   <th>あなたのBMI</th>
+      	   <td><%= @bmi %></td>
+         </tr>
 
-    <tr>
-   	   <th>適正体重より</th>
-	   <td><%= @difference %>kg</td>
-   </tr>
+          <tr>
+         	   <th>適正体重</th>
+      	   <td><%= @proper_weight %>kg</td>
+         </tr>
 
-    <tr>
-   	   <th>肥満度</th>
-	   <td><%= @degree %></td>
-   </tr>
+          <tr>
+         	   <th>適正体重より</th>
+      	   <td><%= @difference %>kg</td>
+         </tr>
 
-  </table>
-  <% end %>
+          <tr>
+         	   <th>肥満度</th>
+      	   <td><%= @degree %></td>
+         </tr>
+
+        </table>
+        <% end %>
+      </div>
+    </div>
+</div>
