--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
        <li role="presentation"><%= link_to "ログアウト",destroy_user_session_path,method: :delete %></li>
        <li role="presentation"><%= link_to "マイページ",user_path(current_user.id) %></li>
        <li role="presentation"><%= link_to "トレーニング履歴",user_training_managements_path %></li>
-       <li role="presentation"><%= link_to "コミュニティ" %></li>
+       <li role="presentation"><%= link_to "コミュニティ",user_posts_path %></li>
      </ul>
 
     <% else %>
