--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -36,7 +36,7 @@
 			<h1>投稿詳細画面</h1>
 			<table>
 				<tr>
-					<td><%= attachment_image_tag @post.user, :profile_image, :fill, 50, 50, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %>
+					<td><%= link_to user_path(@post.user.id) do %><%= attachment_image_tag @post.user, :profile_image, :fill, 50, 50, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %><% end %>
 							<%= @post.created_at %></td>
 				</tr>
 				<tr>
