--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1>マイページ</h1>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-4">
+		<div class="col-xs-6">
 			<table>
 				<tr>
 					<td><%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %></td>
@@ -30,6 +30,25 @@
 						<td><%= @user.registar_weight %>kg</td>
 					<% end %>
 				</tr>
+
+				<tr>
+					<td><%= "フォロー数: #{@user.follower.count}" %><%= "フォロワー数: #{@user.followed.count}" %>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
+						<% unless @user == current_user %>
+						  <% if current_user.following?(@user) %>
+						    <%= link_to 'フォロー外す', unfollow_path(@user.id), method: :POST %>
+						  <% else %>
+						    <%= link_to 'フォローする', follow_path(@user.id), method: :POST %>
+						  <% end %>
+						<% end %>
+				     </td>
+				</tr>
+
+
 				<tr>
 					<td><%= link_to "" ,edit_user_path(@user.id),class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_10783" %></td>
 				</tr>
@@ -49,6 +68,31 @@
 					<%= link_to "コミュニティ",user_posts_path,class: "btn btn-primary btn-lg active" %>
 				</li>
 			</ul>
+		</div>
+
+		<div class="col-xs-6">
+					<% current_user.posts.each do |post| %>
+					<%= link_to user_post_path(post.id) do %>
+						<table>
+							<tr>
+								<td>
+									<%= attachment_image_tag post.user, :profile_image, :fill, 30, 30, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %>
+									    <%= post.user.name %>
+										<%= post.created_at %></td>
+							</tr>
+							<tr>
+								<td><%= post.impression %></td>
+							</tr>
+							<% end %>
+
+							<tr>
+								<td><%= link_to "編集する",edit_user_post_path(post.id) %></td>
+								<td><%= link_to "削除する",user_post_path(post.id),method: :delete %></td>
+
+							</tr>
+						</table>
+					<% end %>
+
 		</div>
 	</div>
 </div>
