--- a/app/views/user/trainings/show.html.erb
+++ b/app/views/user/trainings/show.html.erb
@@ -17,7 +17,7 @@
                  </table>
              </div>
 
-            <div class="col-xs-4">
+            <div class="col-xs-4 training_description">
                 <table>
                     <tr>
                     	<th>説明</th>
