--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,17 @@
     font-size:18px;
 }
 
+header{
+	position:relative;
+	width:100%;
+	height:50px;
+	background-color:#444444;
+}
+
+main{
+	background-color:#eeeeee;
+}
+
 .profile_image{
 	border-radius:50%;
 }
@@ -53,4 +64,19 @@ position:relative;
 	bottom:100px;
 	left:600px;
 	font-size:20px;
+}
+
+.mypage_btn{
+	list-style:none;
+	margin: 10px 0 10px
+}
+
+.mypage_btn li{
+	padding-top:10px;
+}
+
+footer{
+    height:50px;
+    color:#fff;
+	background-color:#444444;
 }
