--- a/app/assets/stylesheets/tranings.scss
+++ b/app/assets/stylesheets/tranings.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the tranings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.training_movies{
+	float:left;
+	margin-right:100px;
+}
+
+.training_description{
+	padding-top:350px;
+}
