--- a/app/assets/stylesheets/user/weights.scss
+++ b/app/assets/stylesheets/user/weights.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the user/weights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th{
+	display:inline-block;
+}
+
+.btn{
+	margin-top:10px;
+	margin-bottom:10px;
+	width:400px;
+}
