--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<h1>コミュニティ</h1>
-			<table>
+			<table class="table">
 				<tr>
 					<td><%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %></td>
 					<td><%= link_to "" ,edit_user_path(@user.id),class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_10783" %></td>
@@ -34,7 +34,7 @@
 
 		<div class="col-xs-6">
 			<h1>投稿詳細画面</h1>
-			<table>
+			<table class="table">
 				<tr>
 					<td><%= link_to user_path(@post.user.id) do %><%= attachment_image_tag @post.user, :profile_image, :fill, 50, 50, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %><% end %>
 							<%= @post.created_at %></td>
