--- a/app/views/user/trainings/index.html.erb
+++ b/app/views/user/trainings/index.html.erb
@@ -15,7 +15,7 @@
 
     <div class="col-xs-9">
       <% @trainings.each do |training| %>
-        <table>
+        <table class="training_movies">
         	<tr>
       	  	<td><h3><%= training.training_name %></h3></td>
           </tr>
