--- a/app/views/user/weights/new.html.erb
+++ b/app/views/user/weights/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-6">
 
       <h1>体重入力画面</h1>
 
@@ -17,7 +17,11 @@
 
           <tr><td><%= f.submit '計算する',name: "calculation_button",class: "btn btn-primary btn-lg active" %></td></tr>
           <tr><td><%= f.submit '保存する',class: "btn btn-primary btn-lg active" %></td></tr>
+      </table>
+    </div>
 
+      <div class="col-xs-6">
+        <table>
          <tr>
          	   <th>あなたのBMI</th>
       	   <td><%= @bmi %></td>
