--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,12 +27,71 @@
     font-size:18px;
 }
 
+
+
 header{
 	position:relative;
 	width:100%;
 	height:50px;
 	background-color:#444444;
 }
+
+header a{
+	color:#fff;
+}
+
+#hm-icon{
+	position:fixed;
+	right:20px;
+	top:20px;
+	z-index:10;
+}
+
+.menu-trigger{
+  display: inline-block;
+  transition: all .4s;
+  box-sizing: border-box;
+}
+
+.menu-trigger {
+  position: relative;
+  width: 50px;
+  height: 44px;
+}
+
+.menu-trigger span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  border-radius: 4px;
+}
+
+#sp-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background:rgba(0,0,0,0.75);
+  color: #fff;
+  width: 400px;
+  min-height: 100%;
+  display: none;
+  z-index: 9;
+}
+
+#sp-menu li{
+  text-align: center;
+  margin-bottom: 30px;
+  list-style:none;
+}
+
+#sp-menu a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 
 main{
 	background-color:#eeeeee;
@@ -50,11 +109,12 @@ background-size:cover;
 position:relative;
 }
 
-#main-image h1{
+.main_title{
 	position:absolute;
-	top:300px;
-	left:50px;
-	font-size:60px;
+	top:70px;
+	right:30px;
+	font-size:100px;
+	font-weight:bold;
 	text-align:center;
 	text-shadow: 1px #fff;
 }
