--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <section>
 	 <div id="main-image">
 	    <div class="image1"></div>
-	    <h1>Make Exercise<br> a <br>Habit </h1>
+	    <h1 class="main_title">Make Exercise<br> a <br>Habit </h1>
 	    <div><%= link_to "トレーニングを始める",user_trainings_path,class: "btn btn-primary btn-lg active topbtn" %></div>
 	  </div>
 </section>
