--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <header>
       <nav>
-        <%= link_to "Exerb" ,root_path,class: "header_title" %>
+        <div class="header_logo">
+          <%= link_to "Exerb" ,root_path%>
+        </div>
 
         <div id="hm-icon">
           <a class="menu-trigger" href="#">
