--- a/app/views/user/post_comments/edit.html.erb
+++ b/app/views/user/post_comments/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>User::PostComments#edit</h1>
-<p>Find me in app/views/user/post_comments/edit.html.erb</p>
+<h1>コメント編集画面</h1>
+
+			<%= form_for([@post,@post_comment],url:user_post_post_comment_path(@post.id)) do |f| %>
+				<%= f.text_area :comment,class: "form-control",placeholder: "コメントをここに" %>
+				<%= f.submit "コメントする",class: "btn btn-primary btn-lg active" %>
+			<% end %>
