--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -2,42 +2,15 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<h1>コミュニティ</h1>
-			<table class="table">
-				<tr>
-					<td><%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %></td>
-					<td><%= link_to "" ,edit_user_path(@user.id),class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_10783" %></td>
-				</tr>
-				<tr>
-					<th>名前</th>
-					<td><%= @user.name %></td>
-				</tr>
-				<tr>
-					<th>自己紹介</th>
-				</tr>
-				<tr>
-					<td><%= @user.introduction %></td>
-				</tr>
-			</table>
-
-            <h2>新規投稿</h2>
-            <%= form_for(@post_new,url:user_posts_path) do |f| %>
-            <table>
-            	<tr>
-            		<td><%= f.text_area :impression, size: "50×100" %></td>
-            	</tr>
-            	<tr>
-            		<td><%= f.submit "投稿する",class: "btn btn-primary btn-lg active" %></td>
-            	</tr>
-			<% end %>
-			</table>
+			<%= render "user/posts/list",user:@user,post:@post,post_new:@post_new %>
 		</div>
 
 		<div class="col-xs-6">
 			<h1>投稿詳細画面</h1>
-			<table class="table">
+			<table class="table table_post">
 				<tr>
 					<td><%= link_to user_path(@post.user.id) do %><%= attachment_image_tag @post.user, :profile_image, :fill, 50, 50, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %><% end %>
-							<%= @post.created_at %></td>
+							<%= @post.created_at.strftime("%Y年%-m月%-d日 %-H時%-M分 ") %></td>
 				</tr>
 				<tr>
 					<td><%= @post.impression %></td>
@@ -63,11 +36,31 @@
 			</table>
 
 			<!-- コメント機能 -->
+			<h3>コメント</h3>
+			<% @post.post_comments.each do |comment| %>
+				<table>
+					<tr>
+						<td><%= link_to user_path(comment.user.id) do %><%= attachment_image_tag comment.user, :profile_image, :fill, 50, 50, format: 'jpeg',fallback: "no_image.jpg",class:"profile_image" %><% end %>
+							<%= comment.created_at.strftime("%Y年%-m月%-d日 %-H時%-M分 ") %></td>
+					</tr>
+					<tr>
+						<td><%= comment.comment %></td>
+					</tr>
+					<% if comment.user == current_user %>
+					<tr>
+						<td><%= link_to edit_user_post_post_comment_path(@post.id,comment.id) do %><i class="fas fa-edit"></i><% end %>
+						<%= link_to user_post_post_comment_path(@post.id,comment.id),method: :delete do %><i class="fas fa-trash-alt"></i><% end %></td>
+		            </tr>
+		            <% else %>
+		            <% end %>
+				</table>
+			<% end %>
 
-		<table>
 
-		</table>
-
+			<%= form_for([@post,@post_comment],url:user_post_post_comments_path(@post.id)) do |f| %>
+				<%= f.text_area :comment,class: "form-control",placeholder: "コメントをここに" %>
+				<%= f.submit "コメントする",class: "btn btn-primary btn-lg active" %>
+			<% end %>
 		</div>
 	</div>
 </div>
