--- a/app/views/user/weights/index.html.erb
+++ b/app/views/user/weights/index.html.erb
@@ -1,5 +1,5 @@
 <h1>体重管理</h1>
-<%= link_to "体重入力画面へ",new_user_weight_path %>
+<%= link_to "体重入力画面へ",new_user_weight_path,class: "btn btn-primary btn-lg active" %>
 
 <div class="container">
 	<div class="row">
