チャット機能の非同期化、ページ遷移後にページの一番下にスクロール

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,7 @@
 <section>
-	 <div id="main-image">
-	    <div class="image1"></div>
-	    <h1 class="main_title">Make Exercise<br> a <br>Habit </h1>
-	  </div>
+	<div id="top"></div>
+		 <div id="main-image">
+		    <div class="image1"></div>
+		    <h1 class="main_title">Make Exercise<br> a <br>Habit </h1>
+		  </div>
 </section>
