--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,6 +116,10 @@ header a{
 }
 
 //------------------トップ画面----------------------//
+#top{
+  width:100%;
+  height:80px;
+}
 
 .image1 {
 background-image: url(portfolio_top1.jpeg);
