通知機能実装(途中)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,8 @@ header a{
   text-align:center;
 }
 
+//-------------------ハンバーガーメニュー----------------//
+
 #hm-icon{
 	position:fixed;
 	right:20px;
