--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,6 +82,9 @@
 				<li>
 					<%= link_to "トーク一覧",user_rooms_path,class: "btn btn-primary btn-lg active" %>
 				</li>
+				<li>
+					<%= link_to "通知",user_notifications_path,class: "btn btn-primary btn-lg active" %>
+				</li>
 			</ul>
 		</div>
 
@@ -96,6 +99,7 @@
 									    <%= post.user.name %>
 										<%= post.created_at.strftime("%Y年%-m月%-d日 %-H時%-M分 ") %></td>
 							</tr>
+
 							<tr>
 								<td><%= post.impression %></td>
 							</tr>
