--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -422,12 +422,13 @@ footer{
   }
 
   .about_content{
-    font-size:20px;
+    font-size:25px;
     font-weight:bold;
     position:absolute;
     top:300px;
     left:50px;
     text-indent:1em;
+    line-height:150%;
   }
 
   .genre_table .table-bordered{
