--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 <section id="about_image">
 
 	<h1 class="about_title">About</h1>
-	<p class="about_content">運動不足になると体力や全身持久力が低下し、身体活動量が減少します。<br> 身体活動量の減少はさらに体力や全身持久力の低下、筋力や筋持久力の低下も招きます。<br>  筋力が低下すると立ち上がる、歩くなどの日常生活動作能力が低下し、<br> それにより、メンタル面にも悪影響を及ぼし、生活の質が低下します。<br> そういった状況にならないためには、毎日の運動習慣が大切なので、<br> 運動を楽しく継続して行えるようにこのサービスを作ろうと思いました。</p>
+	<p class="about_content"><em>運動不足になると体力や全身持久力が低下し、身体活動量が減少します。<br> 身体活動量の減少はさらに体力や全身持久力の低下、筋力や筋持久力の低下も招きます。<br>  筋力が低下すると立ち上がる、歩くなどの日常生活動作能力が低下し、<br> それにより、メンタル面にも悪影響を及ぼし、生活の質が低下します。<br> そういった状況にならないためには、毎日の運動習慣が大切なので、<br> 運動を楽しく継続して行えるようにこのサービスを作ろうと思いました。</p>
 </section>
