--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container post_show">
+	<%= link_to "Back",user_posts_path,class: "btn btn-primary btn-xs" %>
 	<h1>コミュニティ</h1>
 	<div class="row">
 		<div class="col-xs-12 col-md-6">
