--- a/app/assets/stylesheets/user/notifications.scss
+++ b/app/assets/stylesheets/user/notifications.scss
@@ -24,7 +24,7 @@
 	padding-top:20px;
 	padding-bottom:20px;
 	margin-left:50px;
-	border-bottom: 1px solid #c0c0c0;
+	border-bottom: 1px solid #fff;
 }
 
 .notification_pagenate{
