--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -487,6 +487,12 @@ footer{
     margin-bottom:20px;
   }
 
+  footer p{
+    color:#fff;
+    text-align:center;
+    line-height:40px;
+  }
+
 
 @media screen and (max-width:425px) {
 
