--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,7 +148,7 @@ padding-top:80px;
 }
 
 .image2{
-background-image: image-url("portfolio_top2.jpeg");
+background-image: image-url("top_image2.jpeg");
 background-attachment: fixed;
 width:100%;
 height:700px;
@@ -213,7 +213,7 @@ position:relative;
 //-------------------アバウト------------------------//
 
 #about_image{
-  background-image:image-url("about_image1.web");
+  background-image:image-url("about_image1.webp");
   background-attachment: fixed;
   width:100%;
   height:700px;
